replace all http links with https

--- a/source/pages/favorite-speeches/body.html
+++ b/source/pages/favorite-speeches/body.html
@@ -5,15 +5,15 @@
         <a id="dd_start"></a>
         <h3>Robert Zubrin: The Importance of Space</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/PKZW61IXvsc?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/PKZW61IXvsc?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Jeff Greason: Making Space Pay and Having Fun Doing It</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/m8PlzDgFQMM?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/m8PlzDgFQMM?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Carl Sagan: Pale Blue Dot</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/p86BPM1GV8M?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/p86BPM1GV8M?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Earl Nightingale: The Strangest Secret</h3>
         <p>
@@ -25,111 +25,111 @@
         </p>
         <h3>Marianne Williamson: Our Deepest Fear</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/fQBR_NJxW1M?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/fQBR_NJxW1M?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Charlie Chaplin – From The Great Dictator</h3>
         <p>
-            <iframe width="640" height="360" src="http://www.youtube.com/embed/WibmcsEGLKo?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/WibmcsEGLKo?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Anthony Robbins: The Rocky Story</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/n7xm7CnuY_g?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/n7xm7CnuY_g?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Steve Jobs: 2005 Stanford Commencement Address</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/UF8uR6Z6KLc?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/UF8uR6Z6KLc?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Neil Gaiman: Commencement Speech at the University of the Arts 2012</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/ikAb-NYkseI?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/ikAb-NYkseI?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Simon Sinek: Start with Why</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/u4ZoJKF_VuA?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/u4ZoJKF_VuA?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <p>Read my notes
-            <a href="http://erikunger.com/notes-simon-sinek-start-with-why/">here</a>.</p>
+            <a href="https://erikunger.com/notes-simon-sinek-start-with-why/">here</a>.</p>
         <h3>Simon Sinek: Why good leaders make you feel safe</h3>
         <p>
             <iframe width="640" height="360" src="https://www.youtube.com/embed/lmyZMtPVodo?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>David Logan: Tribal Leadership</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/xTkKSJSqU-I?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/xTkKSJSqU-I?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Steve Jobs: Branding</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/vmG9jzCHtSQ?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/vmG9jzCHtSQ?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Jeremy Rifkin: The Empathic Civilisation</h3>
         <p>
-            <iframe width="640" height="360" src="http://www.youtube.com/embed/l7AWnfFRc7g?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/l7AWnfFRc7g?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Gary Vaynerchuk: Kill it!</h3>
         <p>
-            <object width="480" height="390" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0">
-                <param name="src" value="http://blip.tv/play/gshVzq0AAg">
+            <object width="480" height="390" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0">
+                <param name="src" value="https://blip.tv/play/gshVzq0AAg">
                 <param name="allowfullscreen" value="true">
                 <param name="allowscriptaccess" value="always">
-                <embed width="480" height="390" type="application/x-shockwave-flash" src="http://blip.tv/play/gshVzq0AAg"
+                <embed width="480" height="390" type="application/x-shockwave-flash" src="https://blip.tv/play/gshVzq0AAg"
                     allowfullscreen="true" allowscriptaccess="always">
             </object>
         </p>
         <p>
             <object id="VideoPlayback" style="width: 400px; height: 326px;" width="320" height="240" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000"
-                codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0">
-                <param name="src" value="http://video.google.com/googleplayer.swf?docid=-3755718939216161559&amp;hl=en&amp;fs=true">
+                codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0">
+                <param name="src" value="https://video.google.com/googleplayer.swf?docid=-3755718939216161559&amp;hl=en&amp;fs=true">
                 <param name="allowscriptaccess" value="always">
                 <param name="allowfullscreen" value="true">
                 <embed id="VideoPlayback" style="width: 400px; height: 326px;" width="320" height="240" type="application/x-shockwave-flash"
-                    src="http://video.google.com/googleplayer.swf?docid=-3755718939216161559&amp;hl=en&amp;fs=true" allowscriptaccess="always"
+                    src="https://video.google.com/googleplayer.swf?docid=-3755718939216161559&amp;hl=en&amp;fs=true" allowscriptaccess="always"
                     allowfullscreen="true">
             </object>
         </p>
         <h3>Peter Schiff: Mortgage Bankers Speech 2006</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/jj8rMwdQf6k?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/jj8rMwdQf6k?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Milton Friedman: Socialism is Force</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/DYeYPcougmA?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/DYeYPcougmA?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Yuri N. Maltsev: Freedom versus Big Government</h3>
         <p>
-            <iframe width="640" height="360" src="http://www.youtube.com/embed/lAxKAzpGmVA?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/lAxKAzpGmVA?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>If You Were King</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/BNIgztvyU2U?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/BNIgztvyU2U?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <p>
-            <object width="480" height="301" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0">
-                <param name="src" value="http://blip.tv/play/AYHN%2BjsC">
+            <object width="480" height="301" classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0">
+                <param name="src" value="https://blip.tv/play/AYHN%2BjsC">
                 <param name="allowscriptaccess" value="always">
                 <param name="allowfullscreen" value="true">
-                <embed width="480" height="301" type="application/x-shockwave-flash" src="http://blip.tv/play/AYHN%2BjsC"
+                <embed width="480" height="301" type="application/x-shockwave-flash" src="https://blip.tv/play/AYHN%2BjsC"
                     allowscriptaccess="always" allowfullscreen="true">
             </object>
         </p>
         <h3>Cory Doctorow: SIGGRAPH 2011 Keynote Address</h3>
         <p>
-            <iframe width="640" height="360" src="http://www.youtube.com/embed/hfU6e6--izo?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/hfU6e6--izo?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Even The Troops Are Waking Up</h3>
         <p>
-            <iframe width="640" height="360" src="http://www.youtube.com/embed/K-CpCUOygqU?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/K-CpCUOygqU?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <h3>Robert Fleischer: Ausserirdische Präsenz</h3>
         <p>
-            <iframe width="640" height="480" src="http://www.youtube.com/embed/AYdOU__uqAA?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="480" src="https://www.youtube.com/embed/AYdOU__uqAA?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <hr>
         <p>OK, these are music videos, but I but check out the lyrics:</p>
         <p>
-            <iframe width="640" height="360" src="http://www.youtube.com/embed/d0nERTFo-Sk?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/d0nERTFo-Sk?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
         <p>
-            <iframe width="640" height="360" src="http://www.youtube.com/embed/GTQnarzmTOc?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
+            <iframe width="640" height="360" src="https://www.youtube.com/embed/GTQnarzmTOc?feature=oembed" frameborder="0" allowfullscreen=""></iframe>
         </p>
     </div>
 </div>
