--- a/wget-old-wordpress/index.html
+++ b/wget-old-wordpress/index.html
@@ -408,26 +408,26 @@ Our presence automatically liberates others.</p>
 				</div>
 			</form></li><li id="linkcat-2" class="widget-container widget_links"><h3 class="widget-title">My Sites</h3>
 	<ul class='xoxo blogroll'>
-<li><a href="http://ungerik.net/en/resume/" rel="me" title="Resume: Erik Unger">Résumé / CV</a></li>
-<li><a href="http://spaceleap.com" title="We do for atoms what the internet did for data" target="_blank">Space Leap</a></li>
+<li><a href="./cv/" rel="me" title="Resume: Erik Unger">Résumé / CV</a></li>
+<!-- <li><a href="http://spaceleap.com" title="We do for atoms what the internet did for data" target="_blank">Space Leap</a></li> -->
 
 	</ul>
 </li>
 <li id="linkcat-1" class="widget-container widget_links"><h3 class="widget-title">Personal Development</h3>
 	<ul class='xoxo blogroll'>
-<li><a href="http://drdemartini.com/" title="The Demartini Institute">Dr. John Demartini</a></li>
+<!-- <li><a href="http://drdemartini.com/" title="The Demartini Institute">Dr. John Demartini</a></li>
 <li><a href="http://www.start-living.com/" target="_blank">Manfred Winterheller</a></li>
-<li><a href="http://www.rogerhamilton.com/" title="Wealth Dynamics" target="_blank">Roger Hamilton</a></li>
+<li><a href="http://www.rogerhamilton.com/" title="Wealth Dynamics" target="_blank">Roger Hamilton</a></li> -->
 
 	</ul>
 </li>
 <li id="linkcat-18" class="widget-container widget_links"><h3 class="widget-title">Startup</h3>
 	<ul class='xoxo blogroll'>
-<li><a href="http://bhorowitz.com/" title="ben&#8217;s blog">Ben Horowitz</a></li>
+<!-- <li><a href="http://bhorowitz.com/" title="ben&#8217;s blog">Ben Horowitz</a></li>
 <li><a href="http://www.keystothevault.com/news/index.html" title="Keys to the Vault &#8211; News &amp; Articles">Keith J. Cunningham</a></li>
 <li><a href="http://blog.pmarca.com/" title="blog.pmarca.com">Marc Andreessen</a></li>
 <li><a href="http://pmarca-archive.posterous.com/" title="An ARCHIVE of Marc Andreessen&#8217;s blog posts" target="_blank">Marc Andreessen (old)</a></li>
-<li><a href="http://www.bothsidesofthetable.com/">Mark Suster</a></li>
+<li><a href="http://www.bothsidesofthetable.com/">Mark Suster</a></li> -->
 <li><a href="http://paulgraham.com/articles.html" title="Paul Graham: Essays">Paul Graham</a></li>
 
 	</ul>
