--- a/wget-old-wordpress/cv/index.html
+++ b/wget-old-wordpress/cv/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-	<title>Résumé/CV: Erik Unger</title>
+	<title>CV: Erik Unger</title>
 	<meta name="author" content="Erik Unger" />
-	<meta name="description" content="Résumé/CV: Erik Unger" />
+	<meta name="description" content="CV: Erik Unger" />
 	<link rel="stylesheet" href="base.css" type="text/css" />
 	<link rel="stylesheet" href="print.css" type="text/css" media="print" />
 	
-	<meta property="og:title" content="Résumé/CV: Erik Unger" />
+	<meta property="og:title" content="CV: Erik Unger" />
     <meta property="og:type" content="public_figure" />
     <meta property="og:url" content="http://ungerik.net/en/resume/" />
     <meta property="og:image" content="http://ungerik.net/en/resume/Erik200x300.jpg" />
@@ -17,7 +17,7 @@
 
 <body>
 
-<h1 align="center">Résumé/CV - Erik Unger</h1>
+<h1 align="center">CV - Erik Unger</h1>
 
 <br/><br/>
 <img src="Erik200x300.jpg" alt="Erik Unger" align="right" style="margin:0 0 10px 10px;" />
