--- a/wget-old-wordpress/cv/index.html
+++ b/wget-old-wordpress/cv/index.html
@@ -10,8 +10,8 @@
 	
 	<meta property="og:title" content="CV: Erik Unger" />
     <meta property="og:type" content="public_figure" />
-    <meta property="og:url" content="http://ungerik.net/en/resume/" />
-    <meta property="og:image" content="http://ungerik.net/en/resume/Erik200x300.jpg" />
+    <meta property="og:url" content="http://ungerik.net" />
+    <meta property="og:image" content="http://ungerik.netErik200x300.jpg" />
     <meta property="fb:admins" content="669249533" />
 </head>
 
@@ -28,7 +28,7 @@
 </p>
 -->
 <p>
-	URL of this document: <a href="http://ungerik.net/en/resume/">http://ungerik.net/en/resume/</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="noprint" href="/en/resume/CV_Erik_Unger.pdf">PDF Version</a><br/>
+	URL of this document: <a href="http://ungerik.net">http://ungerik.net</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="noprint" href="CV_Erik_Unger.pdf">PDF Version</a><br/>
 	Contact: <a href="mailto:erik@erikunger.com">erik@erikunger.com</a><br/>
 	Twitter: <a href="http://twitter.com/ungerik">@ungerik</a><br/>
 </p>
@@ -188,9 +188,9 @@
 	<a href="http://www.eads.net/dornier/" target="_blank">EADS - Dornier</a><br/>
 	<a href="http://www.wasner.at" target="_blank">Wasner</a><br/>
 	<a href="http://www.efkon.com" target="_blank">EFKON</a><br/>
-	<a href="http://www.customer-experts.de" target="_blank">Customer Experts</a><span class="noprint"> (<a href="/en/resume/Reference-CustomerExperts1.png" target="_blank">Reference Letter 1</a>, <a href="Reference-CustomerExperts2.png" target="_blank">Reference Letter 2</a>)</span><br/>
+	<a href="http://www.customer-experts.de" target="_blank">Customer Experts</a><span class="noprint"> (<a href="Reference-CustomerExperts1.png" target="_blank">Reference Letter 1</a>, <a href="Reference-CustomerExperts2.png" target="_blank">Reference Letter 2</a>)</span><br/>
 	<a href="http://www.avl.com" target="_blank">AVL List</a><br/>
-	<a href="http://www.sixteen-tons.de/" target="_blank">Sixteen Tons Entertainment</a><span class="noprint"> (<a href="/en/resume/Reference-PromotionSoftware(SixteenTons).png" target="_blank">Reference Letter</a>)</span><br/>
+	<a href="http://www.sixteen-tons.de/" target="_blank">Sixteen Tons Entertainment</a><span class="noprint"> (<a href="Reference-PromotionSoftware(SixteenTons).png" target="_blank">Reference Letter</a>)</span><br/>
 	<a href="http://www.netconomy.net" target="_blank">Netconomy</a><br/>
 	<a href="http://www.redtribe.com/" target="_blank">RedTribe</a><br/>
 </p>
@@ -419,7 +419,7 @@ He and his work impressed me that much, that i tried to convince him to join my 
 			<ul>
 				<li>Programming language: C/C++</li>
 				<li>Total lines of code written: 210k, together with thirdparty libraries > 900k project size</li>
-				<li><a href="/en/resume/Array.h" target="_blank">Example of coding style</a></li>
+				<li><a href="Array.h" target="_blank">Example of coding style</a></li>
 				<li>Integrated third party libraries:
 					<a href="http://www.boost.org/" target="_blank">boost</a>,
 					<a href="http://curl.haxx.se/libcurl/" target="_blank">libcurl</a>,
@@ -435,12 +435,12 @@ He and his work impressed me that much, that i tried to convince him to join my 
 				</li>
 				<li>Location: Austria and Australia</li></ul>
 			<div class="noprint">
-				<img src="/en/resume/Tag7e_small.jpg" />
-				<img src="/en/resume/PannoniaRing06_small.jpg" />
+				<img src="Tag7e_small.jpg" />
+				<img src="PannoniaRing06_small.jpg" />
 			</div>
 			</td></tr>
-		<tr><th>2007<br/>(2 Months)</th>      <td>Development at a <a href="http://www.adobe.com/products/flex/" target="_blank">Adobe Flex</a> project of <a href="http://www.customer-experts.de" target="_blank">Customer Experts</a>. <ul><li>Programming languages: Action Script and Java</li><li>Technologies: <a href="http://www.adobe.com/products/flex/" target="_blank">Adobe Flex Builder</a>, <a href="http://www.eclipse.org/" target="_blank">Eclipse</a>, <a href="http://tomcat.apache.org/" target="_blank">Apache Tomcat</a>, <a href="http://subversion.apache.org" target="_blank">SVN</a>, <a href="http://www.oracle.com">Oracle</a></li><li>Team size: 5</li><li>Location: Austria</li><li><a href="/en/resume/Reference-CustomerExperts1.png">Reference Letter</a></li></ul></td></tr>
-		<tr><th>2007<br/>(1 Month)</th>       <td>Price calculation tool for one of the biggest logistics companies, as sub contractor of <a href="http://www.customer-experts.de" target="_blank">Customer Experts</a>. Realized in C++ with the self developed libraries BaseLib, Ygui and Win32Widgets.<ul><li>Programming languages: C++</li><li>Technologies: BaseLib, Ygui, XML</li><li>Location: Austria</li><li><a href="/en/resume/Reference-CustomerExperts2.png">Reference Letter</a></li></ul></td></tr>
+		<tr><th>2007<br/>(2 Months)</th>      <td>Development at a <a href="http://www.adobe.com/products/flex/" target="_blank">Adobe Flex</a> project of <a href="http://www.customer-experts.de" target="_blank">Customer Experts</a>. <ul><li>Programming languages: Action Script and Java</li><li>Technologies: <a href="http://www.adobe.com/products/flex/" target="_blank">Adobe Flex Builder</a>, <a href="http://www.eclipse.org/" target="_blank">Eclipse</a>, <a href="http://tomcat.apache.org/" target="_blank">Apache Tomcat</a>, <a href="http://subversion.apache.org" target="_blank">SVN</a>, <a href="http://www.oracle.com">Oracle</a></li><li>Team size: 5</li><li>Location: Austria</li><li><a href="Reference-CustomerExperts1.png">Reference Letter</a></li></ul></td></tr>
+		<tr><th>2007<br/>(1 Month)</th>       <td>Price calculation tool for one of the biggest logistics companies, as sub contractor of <a href="http://www.customer-experts.de" target="_blank">Customer Experts</a>. Realized in C++ with the self developed libraries BaseLib, Ygui and Win32Widgets.<ul><li>Programming languages: C++</li><li>Technologies: BaseLib, Ygui, XML</li><li>Location: Austria</li><li><a href="Reference-CustomerExperts2.png">Reference Letter</a></li></ul></td></tr>
 		<tr><th>2006<br/>(4 Months)</th>      <td>Working-time management application for "K&auml;rntner Energie-Verband" implemented with <a href="http://java.sun.com/products/jsp/" target="_blank">JSP</a> and <a href="http://www.oracle.com">Oracle</a>, as sub-contractor of <a href="http://www.netconomy.net" target="_blank">Netconomy</a><ul><li>Programming languages: Java</li><li>Technologies: JSP, Tomcat Oracle</li><li>Location: Austria</li></ul></td></tr>
 		<tr><th>2006<br/>(5 Months)</th>      <td><b>Gameplay-programming for the computer game <a href="http://www.the-show.de/ts_en.html" target="_blank">The Show</a> from <a href="http://www.sixteen-tons.de/" target="_blank">Sixteen Tons Entertainment</a></b>
 			<ul>
@@ -458,7 +458,7 @@ He and his work impressed me that much, that i tried to convince him to join my 
 				<li>Technologies: DirectX, Shader</li>
 				<li>Team size: 25</li>
 				<li>Location: Germany</li>
-				<li><a href="/en/resume/Reference-PromotionSoftware(SixteenTons).png">Reference Letter</a></li>
+				<li><a href="Reference-PromotionSoftware(SixteenTons).png">Reference Letter</a></li>
 			</ul>
 			<div class="noprint">
 				<iframe width="640" height="480" src="//www.youtube.com/embed/xV52KHrZaf8" frameborder="0" allowfullscreen></iframe>
