space chimps yt

--- a/wget-old-wordpress/cv/index.html
+++ b/wget-old-wordpress/cv/index.html
@@ -410,10 +410,7 @@ He and his work impressed me that much, that i tried to convince him to join my 
 			<li>Project lines of code: Millions</li>
 			<li>Data processes by inhouse developed build system: Terrabytes</li>
 			<li>Location: Australia</li></ul>
-			<!-- <div class="noprint">
-				<object width="640" height="385"><param name="movie" value="http://www.youtube.com/v/EIr5qNDZ4uQ?fs=1&amp;hl=en_US&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/EIr5qNDZ4uQ?fs=1&amp;hl=en_US&amp;rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="640" height="385"></embed></object>
-				<object width="640" height="385"><param name="movie" value="http://www.youtube.com/v/F3xWHKyTb6o?fs=1&amp;hl=en_US&amp;rel=0"></param><param name="allowFullScreen" value="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/F3xWHKyTb6o?fs=1&amp;hl=en_US&amp;rel=0" type="application/x-shockwave-flash" allowscriptaccess="always" allowfullscreen="true" width="640" height="385"></embed></object>
-			</div> -->
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/MVPeiCb3HVs?si=RmJcR4cQBoWfjbjn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 			</td></tr>
 		<tr><th>2003-2008</th>                <td><b>BaseLib:</b> Self-development of a platform independent C++ base library, inspired by Java and C# APIs. <a href="https://github.com/ungerik/BaseLib">github.com/ungerik/BaseLib</a> <br/><b>Ygui:</b> Self-development of a platform independent C++ GUI library for the time being only with a widget library for Win32. Supports custom widget libraries, multilanguage, skinning and stylesheets.<br/><b>Next-Reality Engine:</b> Self-development of a platform independent, multithreaded 3D and game engine.
 			<ul>
