--- a/wget-old-wordpress/cv/index.html
+++ b/wget-old-wordpress/cv/index.html
@@ -10,8 +10,8 @@
 	
 	<meta property="og:title" content="CV: Erik Unger" />
     <meta property="og:type" content="public_figure" />
-    <meta property="og:url" content="http://ungerik.net" />
-    <meta property="og:image" content="http://ungerik.netErik200x300.jpg" />
+    <meta property="og:url" content="http://erikunger.com" />
+    <meta property="og:image" content="http://erikunger.com/cv/Erik200x300.jpg" />
     <meta property="fb:admins" content="669249533" />
 </head>
 
@@ -28,13 +28,12 @@
 </p>
 -->
 <p>
-	URL of this document: <a href="http://ungerik.net">http://ungerik.net</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a class="noprint" href="CV_Erik_Unger.pdf">PDF Version</a><br/>
 	Contact: <a href="mailto:erik@erikunger.com">erik@erikunger.com</a><br/>
-	Twitter: <a href="http://twitter.com/ungerik">@ungerik</a><br/>
+	Follow me on X: <a href="https://x.com/ungerik">@ungerik</a><br/>
 </p>
 
 
-<div style="align:left;max-width:50em;">
+<div style="max-width:50em;">
 	<p><b>Senior software engineer/architect/CTO with over 20 years of experience</b></p>
 	<p>I have worked on multiple large scale (multi million lines) and perfomance critical projects with C++ and C# but also on smaller web and mobile projects. Realtime 3D graphics has always been one of my favorite topics and I have developed 3D engines for automotive applications, a military geo information system and shipped two games, one on PC another one on PS2, Wii and Xbox360.</p>
 	<p>In nearly all projects, I worked on the design of the basics, the "engine" and the libraries that make the rest of the project go.
